- fixed : getMemberGroups needs to batch memberIds so request urls are not too long

--- a/src/static/scripts/metrics/metrics.scss
+++ b/src/static/scripts/metrics/metrics.scss
@@ -2,7 +2,7 @@
     .subsection-title {
     }
 
-    .metric {
+    .locations {
         .container-medium {
             padding: 30px 30px;
             #map-canvas {
